Ajout d'un fichier test

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'groovy'
 
+apply plugin: 'application'
+mainClassName = 'aloulen.uvsq.gbintool.Main'
+
 repositories {
     mavenCentral()
 }
