--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'groovy'
 
 apply plugin: 'application'
-mainClassName = 'aloulen.uvsq.gbintool.Main'
+mainClassName = 'src.aloulen.Main'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.4.5'
+    compile 'org.codehaus.groovy:groovy-all:2.4.4'
     testCompile 'junit:junit:4.+'
 }
