--- a/build.gradle
+++ b/build.gradle
@@ -9,5 +9,6 @@ repositories {
 
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.4.4'
+    compile 'commons-cli:commons-cli:1.3.1'
     testCompile 'junit:junit:4.+'
 }
